include(ValaPrecompile)

vala_precompile(LIBGCOUCHBASE_VALA_C 
	Client.vala
	GenericResult.vala
	GetResult.vala
	StoreResult.vala
	JSON/Serializer.vala
	JSON/Deserializer.vala
	JSON/Node.vala
PACKAGES
	${DEFAULT_PACKAGES}
OPTIONS
	${DEFAULT_VALA_OPTIONS}
GENERATE_VAPI
	${PKGNAME}-${PKGVERSION}
GENERATE_HEADER
	${PKGNAME}-${PKGVERSION})

set(LIBGCOUCHBASE_CFLAGS
	${CORE_DEPS_CFLAGS}
	${CORE_DEPS_CFLAGS_OTHER}
	-w
)
set(LIBGCOUCHBASE_LIB_PATHS
	${CORE_DEPS_LIBRARY_DIRS}
)
link_directories(${LIBGCOUCHBASE_LIB_PATHS})
add_definitions(${LIBGCOUCHBASE_CFLAGS})

add_library(${PKGNAME}-${PKGVERSION} SHARED ${LIBGCOUCHBASE_VALA_C})
target_link_libraries(${PKGNAME}-${PKGVERSION} ${CORE_DEPS_LIBRARIES})
configure_file (${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}-${PKGVERSION}.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc)

install (
	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.vapi ../${PKGNAME}-${PKGVERSION}.deps
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/vala/vapi/)
install (
	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.h
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/)
install (
	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc
	DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/pkgconfig/)
install (
	TARGETS ${PKGNAME}-${PKGVERSION}
	DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/)
